# crime_alley_cv

./: .dockerignore  .gitignore  Dockerfile  README.md  apontamentos.md  backlog.md  backlog_gemini.md  core.md  debug.ipynb  entrypoint.sh  main.md  prompt.md  pyproject.toml  requirements.md  review.md  start.sh  style.md
.github/workflows/: ci.yml  publish.yml
.plan/: backlog.md  boundary_plan.md  continue.md  debug_tracking.md  done_backlog.md  watchdog.fish
billf/: README.md  main.md
bob_revisor/: README.md  main.md
boundaries/: bill_harvey.fish  gatekeeper_bill.fish  gatekeeper_donna.fish  harvey_depchecker.fish  harvey_karen.fish  harvey_setup.fish  harvey_shadow.fish  harvey_vera.fish  karen_gatekeeper.fish
core/: core.py  main.py
core/libs/: logger.py
data_example/docs/: cv.md  job.md  who_are_u.md
donna_guy/: README.md
donna_nana/: README.md  main.md
harvey_guy/: README.md  __init__.py  gatekeeper.py  harvey_guy.py  main.md  main.py  shadow.md
harvey_guy/libs/: __init__.py  logger.py
karen_guard/: Dockerfile  README.md  Readme.md  backlog.md  main.md  prompt_persona.txt  requirements.txt  run.sh  run_evaluator.sh
nana/: README.md  main.md
tests/: test_boundaries.py  test_gatekeeper.py  test_harvey.py  test_logger.py  test_run_sh.py
tests/mocks/: company_info.md  repos.json
tests/mocks/anti_karen/: who_are_u.md
vera_guy/: README.md
vera_psyco/: README.md  main.md
